fix img extra space bug

--- a/hexschool summer camp 2021/hw1/style.css
+++ b/hexschool summer camp 2021/hw1/style.css
@@ -21,6 +21,10 @@
     margin: 40px 0;
 }
 
+img {
+    vertical-align: middle;
+}
+
 .title {
     font-size: 32px;
     font-weight: medium;
@@ -114,7 +118,7 @@
 }
 
 .item .description {
-    line-height: 1.2;
+    line-height: 1.5;
     font-size: 20px;
     font-weight: 300;
     font-family: 'PingFang TC';
